gcc/testsuite/rust/rustc/ui/resolve/issue-17518.rs
enum SomeEnum {
    E
}

fn main() {
    E { name: "foobar" }; // { dg-error ".E0422." "" { target *-*-* } }
}

